kubernetes/infrastructure/reddit-gateway/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: reddit-gateway
  labels:
    name: reddit-gateway
