kubernetes/infrastructure/reddit-gateway/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: reddit-gateway
spec:
  selector:
    app: reddit-gateway
  ports:
    - name: http
      port: 8080
      targetPort: http
