kubernetes/infrastructure/reddit-gateway/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: reddit-gateway
  namespace: reddit-gateway
spec:
  parentRefs:
    - name: external-gateway
      namespace: kube-system
      sectionName: https-domain1
    - name: external-gateway
      namespace: kube-system
      sectionName: http-domain1
  hostnames:
    - "rg.${DOMAIN1}"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: reddit-gateway
          port: 8080
